--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <body class="font-manrope">
     <!-- header section -->
-    <header class="max-w-screen-lg m-auto">
+    <header class="w-4/5 m-auto">
         <div class="flex justify-between mt-10 items-center">
             <div>
                 <h1 class="text-4xl"><i class="fa-solid fa-arrow-right -rotate-45 bg-green-400 rounded-full p-1"></i> Rinterio</h1>
@@ -74,7 +74,7 @@
                 <img class="ml-10" src="./assets/Vector.png" alt="">
             </div>
     
-            <div class="flex max-w-screen-lg m-auto space-x-4">
+            <div class="flex w-4/5 m-auto space-x-4">
                 <div>
                     <div>
                         <h1 class="font-bold mb-4"><i class="fa-solid fa-arrow-right rounded-full p-1"></i> About us</h1>
