--- a/index.html
+++ b/index.html
@@ -154,11 +154,27 @@
                     <h1 class="text-5xl font-bold">Our Works Process</h1>
                     <p>The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
                 </div> 
+                <!-- form -->
+                <div>
+                    <div class="grid grid-cols-2 gap-4">
+                        <input class="p-3 rounded-full" type="text" placeholder="First Name*">
+                        <input class="p-3 rounded-full" type="text" placeholder="Last Name*">
+                        <input class="p-3 rounded-full" type="number" placeholder="Phone Number*">
+                        <input class="p-3 rounded-full" type="number" placeholder="Email Number*">
+                    </div>
 
-                
+                    <textarea class="w-full p-3 h-[240px] mt-4" name="" id="" placeholder="Write your message here"></textarea>
+
+                    <button class="font-bold mt-4 bg-green-300 p-3 rounded-full w-full">Send Mail <i class="fa-solid fa-arrow-right p-1 rounded-full -rotate-45 text-white bg-black"></i> </button>
+                </div>
             </div>
          </section>
     </main>
+
+    <!-- footer -->
+    <footer>
+        
+    </footer>
 </body>
 
 </html>
